--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,9 +9,9 @@ build: false
 
 test_script:
   - echo "Install pip<18.0 version to force briefcase to upgrade pip"
-  - python -m pip install pip<18.0
+  - python -m pip install pip==10.0.1
   - echo "This command should fail with Access Denied error"
-  - pip install --upgrade briefcase
+  - pip install --upgrade briefcase || true
 
   - echo "Install fixed version of pip (it's 17.0 version, briefcase wants to upgrade it)"
   - python -m pip install -e git+git://github.com/atugushev/pip@reproduce_issue_6841#egg=pip
