--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -8,7 +8,7 @@ install:
 build: false
 
 test_script:
-  - fsutil reparsepoint query C:\Python36\Scripts
+  - dir /AL /B C:\Python36\Scripts
   - python -m pip install -e git+git://github.com/atugushev/pip@fix-issue-6841#egg=pip
   - pip install --upgrade pip || true
   - pip3 install --upgrade pip || true
