--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -9,5 +9,6 @@ build: false
 
 test_script:
   - python -m pip install pip==9.0.1
-  - python -m pip install -e git+git://github.com/atugushev/pip-tools@fix-issue-625#egg=pip-tools
+  # - python -m pip install -e git+git://github.com/atugushev/pip-tools@fix-issue-625#egg=pip-tools
+  - python -m pip install pip-tools
   - pip-compile
