--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,4 +11,6 @@ test_script:
   - python -m pip install pip==9.0.1
   # - python -m pip install -e git+git://github.com/atugushev/pip-tools@fix-issue-625#egg=pip-tools
   - python -m pip install pip-tools
+  - python -V
+  - pip-compile --version
   - pip-compile
