--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -13,5 +13,6 @@ test_script:
   - python -m pip install pip-tools
   - python -V
   - pip-compile --version
+  - python -c 'import setuptools; print(setuptools.__version__)'
   - cat setup.py
   - pip-compile
